--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -2,9 +2,9 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
   width: 100%;
-  background: url('/assets/images/login_bg.jpg') no-repeat center;
+  height: 100%;
+  background: url(/assets/images/login_bg.jpg) no-repeat center;
   background-size: cover;
 }
 
@@ -20,7 +20,7 @@ body {
 
 .title-box {
   height: 60px;
-  background: url('/assets/images/login_title.png') no-repeat center;
+  background: url(/assets/images/login_title.png) no-repeat center;
 }
 
 .reg-box {
